--- a/miniProgram/music/components/area-header/index.wxml
+++ b/miniProgram/music/components/area-header/index.wxml
@@ -5,7 +5,7 @@
     <view class="slot">
       <slot></slot>
     </view>
-    <view class="default" wx:if="{{showRight}}">
+    <view class="default" wx:if="{{showRight}}" bindtap="handleMore">
       <text>{{rightText}}</text>
       <image class="icon" src="../../assets/images/icons/arrow-right.png"></image>
     </view>
