--- a/miniProgram/music/pages/home-music/index.wxml
+++ b/miniProgram/music/pages/home-music/index.wxml
@@ -9,19 +9,19 @@
     </swiper-item>
   </block>
 </swiper>
-<!-- 推荐歌曲 -->
+<!-- 热门歌单 -->
+<song-list-area list="{{hotSongList}}"></song-list-area>
+<!-- 热门歌曲 -->
 <view>
-  <area-header title="推荐歌曲"></area-header>
-  <block wx:for="{{recommandSongs}}" wx:key="id">
+  <area-header title="热门歌曲" bind:handleMore="handleHotSong" data-idx="{{3}}"></area-header>
+  <block wx:for="{{recommandSongs.playlist}}" wx:key="id">
     <song-item-v1 item="{{item}}"></song-item-v1>
   </block>
 </view>
-<!-- 热门歌单 -->
-<song-list-area list="{{hotSongList}}"></song-list-area>
 <!-- 巅峰榜 -->
 <view class="">
   <area-header title="巅峰榜" showRight="{{false}}"></area-header>
   <block wx:for="{{topLists}}" wx:key="id">
-    <top-list-item item="{{item}}"></top-list-item>
+    <top-list-item item="{{item}}" bindtap="handleRanking" data-idx="{{index}}"></top-list-item>
   </block>
 </view>
